# wasm-edge-lambda

./: .gitignore  Taskfile.yml  docker-compose.yml
.github/workflows/: main.yml
bun-lambda/: README.md  build.js  bun.lockb  index.ts  package.json
edge-lambda/: build.gradle.kts  gradle.properties  settings.gradle.kts
js-lambda/: bun.lockb  esbuild.config.js  index.ts  package.json
js-lambda/errors/: error-codes.ts  exception-handler.ts  index.ts
node-adapter/: index.js  main.js  package-lock.json  package.json
rust-edge-lambda/: .dockerignore  Cargo.toml  Dockerfile
rust-edge-lambda/src/: lib.rs  main.rs  types.rs
rust-edge-lambda/src/errors/: exception.rs
rust-edge-lambda/src/helpers/: cloudfront.rs
rust-edge-lambda/src/types/: cloudfront.rs
