[package]
name = "rust-edge-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9"
# If you do not need pem decoding, you can disable the default feature `use_pem` that way:
# jsonwebtoken = {version = "9", default-features = false }
serde = {version = "1.0", features = ["derive"] }
