[package]
name = "rust-edge-lambda"
version = "0.1.0"
edition = "2021"

[lib]
name = "verify"
crate-type = ["cdylib", "rlib"]

[dependencies]
jsonwebtoken = "9"
# If you do not need pem decoding, you can disable the default feature `use_pem` that way:
# jsonwebtoken = {version = "9", default-features = false }
serde = {version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.41"
serde_json = "1.0.117"
serde-wasm-bindgen = "0.6.5"
base64 = "0.22.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false